cmake_minimum_required(VERSION 3.22)
project(TP2 C)

set(CMAKE_C_STANDARD 99)

# Exo 4 - 10
add_executable(exo4_10 exo4_10.c)

# Exo 4 - 11
add_executable(exo4_11 exo4_11.c)

# Exo 4 - 12
add_executable(exo4_12 exo4_12.c)

# Exo 4 - 13
add_executable(exo4_13 exo4_13.c)

# Exo 4 - 14
add_executable(exo4_14 exo4_14.c)


